--- a/src/pages/popup.html
+++ b/src/pages/popup.html
@@ -4,7 +4,7 @@
     <style>
       :root {
         --primary-color: #4a4a4a;
-        --secondary-color: #42a5f5;
+        --secondary-color: #70A597;
         --background-color: #f5f5f5;
       }
 
