added suport for configuring GPT-4 Plugins and Browsing modes

--- a/src/pages/popup.html
+++ b/src/pages/popup.html
@@ -63,6 +63,8 @@
     <div class="container">
       <select id="gpt_version">
         <option value="gpt-4">GPT-4 (Latest)</option>
+        <option value="gpt-4-plugins">GPT-4 (Plugins)</option>
+        <option value="gpt-4-browsing">GPT-4 (Browsing)</option>
         <option value="text-davinci-002-render-sha">GPT-3.5 (Current)</option>
         <option value="text-davinci-002-render-paid">GPT-3.5 (Legacy)</option>
       </select>
