--- a/src/pages/popup.html
+++ b/src/pages/popup.html
@@ -62,7 +62,8 @@
     <h3>Select ChatGPT default model version:</h3>
     <div class="container">
       <select id="gpt_version">
-        <option value="gpt-4">GPT-4 (Latest)</option>
+        <option value="gpt-4o">GPT-4o (Latest)</option>
+        <option value="gpt-4">GPT-4</option>
         <option value="gpt-4-plugins"> &nbsp; - Plugins</option>
         <option value="gpt-4-browsing"> &nbsp; - Browsing</option>
         <option value="text-davinci-002-render-sha">GPT-3.5 (Current)</option>
